Entrega proyecto final

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,8 +51,7 @@
         <div class="contact-info">
           <h3 class="title">Dejanos tu consulta</h3>
           <p class="text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-            dolorum adipisci recusandae praesentium dicta!
+            Estamos dispuestos a contestar todas tus dudas y consultas. Esperamos tu mensaje.
           </p>
 
           <div class="info">
@@ -77,13 +76,10 @@
                 <i class="fab fa-facebook-f"></i>
               </a>
               <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#">
                 <i class="fab fa-instagram"></i>
               </a>
               <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-youtube"></i>
               </a>
             </div>
           </div>
@@ -133,8 +129,8 @@
           </div>
           <div class="box">
               <h2>SOBRE NOSOTROS</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+              <p>Ciudad de La Plata. Provincia de Buenos Aires, Argentina</p>
+              <p>C. 33 1020, B1902BIP</p>
           </div>
           <div class="box">
               <h2>SIGUENOS</h2>
@@ -152,6 +148,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   <script src="../js/app.js"></script>
-  <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script> -->
 </body>
 </html>
