--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,30 +46,10 @@
     <div class="section__aboutus">
       <h2>Sobre Nosotros</h2>
       <div class="nosotros__info">
-          <p class="nosotros__info-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos nihil alias minima accusamus quas quaerat tempore sed nesciunt nam commodi, magnam eos laudantium nisi iure repellendus! Labore quo adipisci rerum.
-              Corporis iure perferendis molestias adipisci recusandae, ipsam veniam totam voluptates ipsum officiis, doloribus at beatae quia exercitationem, atque iusto commodi laborum facilis vel asperiores doloremque. Harum beatae vitae facilis inventore.
-              Optio aliquid ad fugit sequi, molestiae itaque quam quae illo tenetur modi omnis natus minima voluptates fugiat dolor impedit adipisci culpa accusamus ut quisquam magnam. Qui cum voluptatem unde vel.
-              Sit nulla, at molestiae aperiam voluptate maiores perspiciatis nam fugit suscipit officia minima facere iusto eligendi dolor animi necessitatibus nostrum voluptatibus, dolore illo, dolores molestias ullam quas accusamus soluta? Ipsa.
-              Maiores, quia! Porro, ratione! Illum accusantium, voluptate magni iure natus dolorum aliquam esse cupiditate doloremque asperiores accusamus ab optio aperiam architecto dicta ex perferendis veritatis deserunt provident rem quidem facere?
-              Facere commodi reprehenderit quae fuga maiores vero tempora rerum deleniti! Error fugiat molestiae modi quaerat odio quasi ipsam nostrum perspiciatis, a dolorum nemo rerum reprehenderit. Cumque molestias maiores recusandae quas!
-              Ab eaque ducimus, atque reiciendis eos corrupti laborum quae officiis vitae rem explicabo, fugit dolorem facilis repellat repellendus! Consequuntur, doloribus magni quos omnis delectus impedit assumenda dolorem quibusdam neque deserunt?
-              Nihil, ab, similique ipsam veritatis aut asperiores aliquam inventore deleniti repudiandae cum minima voluptatem! Nulla qui quas nisi possimus consequatur officia aut, ipsam repudiandae labore sed porro nemo, hic aperiam.
-              Dolorum placeat distinctio pariatur ratione consectetur alias dolore rem explicabo asperiores quia provident ea eveniet, sequi, officiis sunt nisi facere dolorem. Eum soluta ad culpa neque, nobis eos? Beatae, eaque!
-              Excepturi unde iste iure illo placeat ex accusantium at dolores esse voluptate, repellat aliquid. Ipsam voluptatum praesentium eveniet deleniti ex? Hic, cum reprehenderit tenetur aliquam blanditiis accusamus magnam aperiam fugit?
-              In consequuntur aperiam delectus. Aliquam eligendi modi esse voluptatibus eum deserunt est laboriosam architecto sequi, itaque ea odit magni quaerat, veniam quibusdam! Incidunt sapiente, sint assumenda nihil quas voluptatibus impedit?
-              Animi explicabo consequatur eius temporibus! Quas ea rem suscipit consequatur amet a maxime, ratione fugit. Perferendis, vel temporibus. Vero est error totam sit dolorum perferendis perspiciatis aliquid minus cum ab.
-              Officia eveniet tempora aspernatur doloribus eos, quia tempore commodi ea ipsum itaque quo tenetur voluptate molestiae rerum culpa nostrum dolor distinctio! Aliquam nam saepe eos illum laudantium ipsa repellendus provident!
-              Quis aspernatur commodi, quos velit quas voluptatem asperiores dignissimos cumque autem impedit dolorum, harum eius repellendus. Nobis architecto officia fuga aspernatur delectus consequatur. Est nemo commodi soluta praesentium corporis explicabo.
-              Consequatur ut quaerat, omnis fugiat facere fugit quas eligendi at architecto nobis ab minima sapiente officia repellat ipsa a perferendis sequi asperiores vero. Suscipit, magnam ipsam tempore exercitationem dolorem praesentium.
-              Rem quas provident veniam distinctio cumque aliquid vero eaque, laboriosam, ad porro illum quo, neque odit quibusdam. Voluptatem, magnam doloremque nobis in odit deserunt saepe, et consequuntur a est magni!
-              Facilis culpa amet obcaecati aspernatur nisi! Porro, reprehenderit explicabo vel, libero distinctio id deserunt, rem asperiores laborum saepe similique repellat consequuntur fuga alias. Porro neque suscipit dolore asperiores obcaecati tempora.
-              Perferendis vitae eum in doloribus alias quasi dolorem possimus nam, sed debitis nulla nobis saepe voluptates voluptas amet natus sequi veritatis! Eveniet alias sequi aperiam similique fuga sunt nemo. Vero.
-              Animi aut, obcaecati a corrupti ullam iste omnis. Dolorem nobis aperiam sit incidunt necessitatibus minima, nesciunt soluta facilis. Accusamus deserunt maiores repellendus a eos necessitatibus possimus quod non pariatur odio?
-              Blanditiis nam veniam atque placeat. Iure enim possimus rerum esse aliquam ullam magnam tempore assumenda omnis fugiat modi quisquam sit porro ex velit debitis vero laudantium, iste hic quia saepe!</p>
-              <div>
-                  <img src="../assets/img/Recurso 1.png" alt="imagen representativa">
-              </div>
-
+          <p class="nosotros__info-text">Años en la industria musical, tecnológica y fotográfica, nos permite llevar adelante un asesoramiento que se adapta de manera eficaz a las necesidades que los clientes tengan. Generando así, que el cliente lleve al producto específico y adecuado que buscaba. Creamos estrategias personalizadas para tu proyecto, así te ofrecemos una hoja de ruta con los productos que tu proyecto necesita para obtener el rendimiento. </p>
+          <div>
+            <img src="../assets/img/Recurso 1.png" alt="imagen representativa">
+          </div>
       </div>
   </div>
   <footer class="pie-pagina">
@@ -83,8 +63,8 @@
         </div>
         <div class="box">
             <h2>SOBRE NOSOTROS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+            <p>Ciudad de La Plata. Provincia de Buenos Aires, Argentina</p>
+            <p>C. 33 1020, B1902BIP</p>
         </div>
         <div class="box">
             <h2>SIGUENOS</h2>
