--- a/pages/productos.html
+++ b/pages/productos.html
@@ -52,38 +52,38 @@
    
          <div class="product" data-name="p-1">
             <img src="../assets/img/audio-technica-m40x.png" alt="">
-            <h3>Audio-Technica-m50x</h3>
-            <div class="price">$150.00</div>
+            <h3>Audio-Technica ATH-M50x</h3>
+            <div class="price">$169.00</div>
          </div>
    
          <div class="product" data-name="p-2">
             <img src="../assets/img/camera-canon (1).jpg" alt="">
-            <h3>Camara Canon</h3>
-            <div class="price">$700.00</div>
+            <h3>Canon Rebel T7</h3>
+            <div class="price">$479.00</div>
          </div>
    
          <div class="product" data-name="p-3">
             <img src="../assets/img/essential-keylab49.png" alt="">
-            <h3>Arturia 66key</h3>
-            <div class="price">$2.00</div>
+            <h3>Arturia Essential Key LAB49</h3>
+            <div class="price">$269.00</div>
          </div>
    
          <div class="product" data-name="p-4">
             <img src="../assets/img/imterfaz_scarlett.png" alt="">
-            <h3>Scarlett</h3>
-            <div class="price">$2.00</div>
+            <h3>Scarlett 2i2</h3>
+            <div class="price">$179.00</div>
          </div>
    
          <div class="product" data-name="p-5">
             <img src="../assets/img/interfaz2.png" alt="">
-            <h3>broccoli</h3>
-            <div class="price">$2.00</div>
+            <h3>Solid Stage Logic</h3>
+            <div class="price">$350.00</div>
          </div>
    
          <div class="product" data-name="p-6">
             <img src="../assets/img/teclado.webp" alt="">
-            <h3>potatoes</h3>
-            <div class="price">$2.00</div>
+            <h3>Teclado Mecánico Keychron K2</h3>
+            <div class="price">$79.00</div>
          </div>
    
       </div>
@@ -94,30 +94,28 @@
    
       <div class="preview" data-target="p-1">
          <i class="fas fa-times"></i>
-         <img src="../assets/img/Imagenes para page productos/audio-technica-m50x.png" alt="">
-         <h3>Audio-technica-m50x</h3>
+         <img src="../assets/img/audio-technica-m40x.png" alt="">
+         <h3>Audio-technica ATH M50x</h3>
          <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i
             <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <span>( 250 )</span>
+            <span>( 340 )</span>
          </div>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-         <div class="price">$150.00</div>
+         <p>Pureza. Profesionalidad. Productividad. Este es el modelo más aclamado de la serie M, elogiado por reputados ingenieros de audio y críticos de audio profesional año tras año.</p>
+         <div class="price">$169.00</div>
          <div class="buttons">
-            <a href="#" class="buy">buy now</a>
-            <a href="#" class="cart">add to cart</a>
+            <a href="#" class="buy">Comprar</a>
+            <a href="#" class="cart">Agregar al carrito</a>
          </div>
       </div>
    
       <div class="preview" data-target="p-2">
          <i class="fas fa-times"></i>
-         <img src="../assets/img/Imagenes para page productos/canon.png" alt="">
-         <h3>Cámara Canon</h3>
+         <img src="../assets/img/camera-canon (1).jpg" alt="">
+         <h3>Canon Rebel T7</h3>
          <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -126,78 +124,79 @@
             <i class="fas fa-star-half-alt"></i>
             <span>( 250 )</span>
          </div>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-         <div class="price">$2.00</div>
+         <p>Ideal para usuarios de dispositivos móviles que desean dar el siguiente paso en su fotografía, la cámara EOS Rebel T7 combina fantásticas características con una operación sencilla de uso para obtener imágenes de alta calidad.</p>
+         <div class="price">$479.00</div>
          <div class="buttons">
-            <a href="#" class="buy">buy now</a>
-            <a href="#" class="cart">add to cart</a>
+            <a href="#" class="buy">Comprar</a>
+            <a href="#" class="cart">Agregar al carrito</a>
          </div>
       </div>
    
       <div class="preview" data-target="p-3">
          <i class="fas fa-times"></i>
          <img src="../assets/img/essential-keylab49.png" alt="">
-         <h3>Arturia</h3>
+         <h3>Arturia Essential KeyLAB49</h3>
          <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
-            <span>( 250 )</span>
+            <span>( 800 )</span>
          </div>
-         <p>Sintetizador digital, controlador MIDI. Pensado para todos aquellos que se quieran dedicar a su HOME-Studio.</p>
-         <div class="price">$124.00</div>
+         <p>Controlador MIDI universal y un paquete de software que cuenta con 49 teclas de acción de sintetizador sensibles a la velocidad.</p>
+         <div class="price">$269.00</div>
          <div class="buttons">
-            <a href="#" class="buy">buy now</a>
-            <a href="#" class="cart">add to cart</a>
+            <a href="#" class="buy">Comprar</a>
+            <a href="#" class="cart">Agregar al carrito</a>
          </div>
       </div>
    
       <div class="preview" data-target="p-4">
          <i class="fas fa-times"></i>
          <img src="../assets/img/imterfaz_scarlett.png" alt="">
-         <h3>organic brinjal</h3>
+         <h3>Scarlett 2i2</h3>
          <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
-            <i class="fas fa-star-half-alt"></i>
-            <span>( 250 )</span>
+            <i class="fas fa-star"></i>
+            
+            <span>( 180 )</span>
          </div>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-         <div class="price">$2.00</div>
+         <p>Diseñada para ofrecer un sonido de primer nivel en un formato compacto, fácil de llevar y fácil de usar para cantautores, guitarristas y dúos de podcasters.</p>
+         <div class="price">$179.00</div>
          <div class="buttons">
-            <a href="#" class="buy">buy now</a>
-            <a href="#" class="cart">add to cart</a>
+            <a href="#" class="buy">Comprar</a>
+            <a href="#" class="cart">Agregar al carrito</a>
          </div>
       </div>
    
       <div class="preview" data-target="p-5">
          <i class="fas fa-times"></i>
          <img src="../assets/img/interfaz2.png" alt="">
-         <h3>organic broccoli</h3>
+         <h3>Solid Stage Logic</h3>
          <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
-            <span>( 250 )</span>
+            <span>( 150 )</span>
          </div>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-         <div class="price">$2.00</div>
+         <p>Preamplificadores de micrófono líderes en su clase, mejora analógica Legacy 4K, monitoreo con calidad de estudio y el increíble paquete de software SSL Production Pack.</p>
+         <div class="price">$350.00</div>
          <div class="buttons">
-            <a href="#" class="buy">buy now</a>
-            <a href="#" class="cart">add to cart</a>
+            <a href="#" class="buy">Comprar</a>
+            <a href="#" class="cart">Agregar al carrito</a>
          </div>
       </div>
    
       <div class="preview" data-target="p-6">
          <i class="fas fa-times"></i>
          <img src="../assets/img/teclado.webp" alt="">
-         <h3>organic potatoes</h3>
+         <h3>Teclado Mecánico Keychron K2</h3>
          <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -206,11 +205,11 @@
             <i class="fas fa-star-half-alt"></i>
             <span>( 250 )</span>
          </div>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
-         <div class="price">$2.00</div>
+         <p>K2 es un teclado inalámbrico o con cable súper táctil que le brinda todas las teclas y funciones que necesita mientras lo mantiene compacto, con la batería más grande que se haya visto en un teclado mecánico.</p>
+         <div class="price">$79.00</div>
          <div class="buttons">
-            <a href="#" class="buy">buy now</a>
-            <a href="#" class="cart">add to cart</a>
+            <a href="#" class="buy">Comprar</a>
+            <a href="#" class="cart">Agregar al carrito</a>
          </div>
       </div>
    
@@ -228,8 +227,8 @@
           </div>
           <div class="box">
               <h2>SOBRE NOSOTROS</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+              <p>Ciudad de La Plata. Provincia de Buenos Aires, Argentina</p>
+              <p>C. 33 1020, B1902BIP</p>
           </div>
           <div class="box">
               <h2>SIGUENOS</h2>
