--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -43,6 +43,30 @@
             </div>
         </nav>
     </header>
+
+    <section class="reviews_page">
+      <div class="reviews_page-title">
+        <h2>Conocé el producto a tu medida</h2>
+        <iframe class="video-reviews-cover" width="560" height="315" src="https://www.youtube.com/embed/hI2kwPYJKkI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
+      <div class="reviews_page-video">
+        <a class="conteiner_page_reviews" href="https://www.youtube.com/watch?v=FgvR6t7M-Wo&ab_channel=SupraPixel" target="_blank">
+          <h4>Moto G200</h4>
+          <img src="../assets/img/moto_g-review.png" alt="">
+        </a>
+        <a class="conteiner_page_reviews" href="https://www.youtube.com/watch?v=bKiPf51ANm4&t=5s&ab_channel=JuanCarlosV%C3%A9lez" target="_blank">
+          <h4>Scarlett 2i2</h4>
+          <img src="../assets/img/scarlett-review.png" alt="">
+        </a>
+        <a class="conteiner_page_reviews" href="https://www.youtube.com/watch?v=QmU9SYGa0s8&ab_channel=JavierLetosa" target="_blank">
+          <h4>Sony A7 III</h4>
+          <img src="../assets/img/sony-review.png" alt="">
+        </a>
+      </div>
+
+    </section>
+
     <footer class="pie-pagina">
       <div class="grupo-1">
           <div class="box">
@@ -54,8 +78,8 @@
           </div>
           <div class="box">
               <h2>SOBRE NOSOTROS</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+              <p>Ciudad de La Plata. Provincia de Buenos Aires, Argentina</p>
+              <p>C. 33 1020, B1902BIP</p>
           </div>
           <div class="box">
               <h2>SIGUENOS</h2>
