--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
           </div>
           <div class="box">
               <h2>SOBRE NOSOTROS</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+              <p>Ciudad de La Plata. Provincia de Buenos Aires, Argentina</p>
+              <p>C. 33 1020, B1902BIP</p>
           </div>
           <div class="box">
               <h2>SIGUENOS</h2>
